[tool.poetry]
name = "repl_nix_LonelyComposedMapping"
version = "0.1.0"
description = ""
authors = ["KennedyDjeumi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
